--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -111,9 +111,7 @@ Leicester LE1 9BH United Kingdom\\[.2cm]
 ---\emph{BSc Digital Music Technology Programme Leader}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{Member of Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2}$)}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
----\emph{Women in NIME (WiNIME) Officer}, International Conference of New Interfaces for Musical Expression.\\
----\emph{Conference Programme Committee Member}. ACM Creativity \& Cognition 2021. Venice, Italy.
-
+---\emph{Women in NIME (WiNIME) Officer}, International Conference of New Interfaces for Musical Expression.
 %%\hrule
 \section*{Areas of Interest}
 %Design of Digital Musical Instruments (DMIs) • Real-time Interactive Systems for Music Performance • Human-Computer Interaction • Interaction Design • Tangible, Physical \& Social Computing • Computer-Supported Collaborative, Participatory \& Improvisation Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Multichannel Spatialization • Generative \& Algorithmic Music • Immersive Sound Experiences • Women in Music Tech • Arts \& Social Sciences Research Methods • STEAM Education • Data Visualization • Creative Programming
@@ -193,8 +191,8 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \subsection*{Academic Grants, Honors \& Awards}
 \years{2019c} \textsc{Web Audio Conference 2019 Best Paper Award} to Anna Xambó, Robin Støckert, Alexander Refsum Jensenius and Sigurd Saue. NTNU, Trondheim, Norway.\\
 \years{2019b} \textsc{The EUNIS DØRUP E-Learning Award} to Robin Støckert, Alexander Refsum Jensenius, Anna Xambó and Øyvind Brandtsegg. NTNU, Trondheim, Norway.\\
-%\years{2019a} \textsc{Travel grant for European research and promotion} (30,000 NOK, approx. 3,000 \euro). NTNU, Trondheim, Norway.\\
-%\years{2018--2019} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK, approx. 25,000 \euro), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
+%\years{2019a} \textsc{Travel grant for European research and promotion} (30,000 kr, approx. 3,000 \euro). NTNU, Trondheim, Norway.\\
+%\years{2018--2019} \textsc{3-year Startup Grant (Startpakke)} (250,000 kr, approx. 25,000 \euro), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
 \years{2017} NCWIT Engagement Excellence Award (5,000 \$ cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
 \years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
 \years{10/2010--07/2013}\textsc{3-year Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
@@ -213,7 +211,7 @@ Role: Creator \& Director.
 \subsection*{Principal Investigator}
 
 {
-\years{04/2020-06/2021}\textsc{Human Data Interaction Network Plus Grant/EPSRC grant} \\
+\years{04/2020-06/2021}\textsc{Human Data Interaction Network Plus/EPSRC Grant} \\
 Funding body: EPSRC. \\
 Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding''.\\
 Role: PI. \\
@@ -225,7 +223,7 @@ Total Pound Amount: 10,000 \pounds \\
 Funding body: NTNU. \\
 The start-up package is awarded to women in permanent academic positions in a scientific field with underrepresentation of women to start their academic careers. With part of this funding I co-founded and was chair of the organisation Women Nordic in Music Technology (\emph{WoNoMute}) (see Enterpreneurship). \\
 Role: PI. \\
-Total Euro Amount: 250,000 NOK, approx. 25,000 \euro \\
+Total Euro Amount: 250,000 kr, approx. 25,000 \euro \\
 
 \years{11/2003-10/2004}\textsc{Teaching innovation project grant} \\
 Funding body: Fundació Caixa de Sabadell. \\
@@ -249,11 +247,11 @@ Total Dollar Amount: 2,517,690.00 \$
 
 \years{2019b}\textsc{Web Audio Conference 2019} \\
 Role: Conference chair. \\
-Total Fundraised Norwegian Krone Amount: 120,000 NOK (approx. 12,000 \euro)\\[.1cm]
+Total Fundraised Norwegian Krone Amount: 120,000 kr (approx. 12,000 \euro)\\[.1cm]
 \years{2019a}\textsc{Internal funding for a COST application} \\
 Role: Project leader. \\
 Travel grant for European research and promotion.\\
-Total Fundraised Norwegian Krone Amount: 30,000 NOK (approx. 3,000 \euro)\\[.1cm]
+Total Fundraised Norwegian Krone Amount: 30,000 kr (approx. 3,000 \euro)\\[.1cm]
 \years{2017--2018}\textsc{Female Laptop Orchestra + WoNoMute +YSWN + Sonora: seminar and concert at SARC} \\
 Role: Co-organizer and participant of the event. \\
 Total Fundraised British Pound Amount: 2,000 \textsterling\\[.1cm]
@@ -506,6 +504,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \noindent
 
 
+\years{2021}Pardue, L., Martínez, J. and \textbf{Xambó, A.} (January 14, 2021). “NIME Diversity Workshop". Online.\\
 \years{2020b}\textbf{Xambó, A.} (September 25, 2020). “Creative Audio Programming for the Web with Tone.js". \emph{Women Who Code} workshop series, School of Media Arts, Columbia College Chicago, IL, USA.\\
 \years{2020a}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Martin, C., Armitage, J., Granieri, N., Fiebrink, R., Naveda, L. (July 21, 2020). “NIME Publication Ecosystem Workshop". \emph{NIME '20}. Birmingham, UK.\\
 \years{2019c} \textbf{Xambó, A.} (June 20--21, 2019). “Creative Audio Programming for the Web". \emph{Filmuniversität Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies (Module 5 Audiovisual Application Design).\\
@@ -554,6 +553,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Broadcasting}
 \noindent
 
+\years{2021}Anna Xambó's “Magnets". (February 2, 2021). TOPLAP \#2 w/ hangar.org. Audio Formal on Dublab.es.\\
 \years{2020}Anna Xambó's “Magnets". (November 9, 2020). Sleepsang - Hyperobjects w/ Sleepsang (Mixcloud playlist).\\
 \years{2019}Anna Xambó's “Footsteps". Feminatronic \#161 - Your 2019 Playback and More (SoundCloud playlist).\\
 \years{2018c}Anna Xambó's “H2RI.01-04". (June 21, 2018). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
@@ -813,7 +813,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{03/2004--05/2004}
 Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8.\\
 Escola Glòries, Barcelona.\\
-Role: Co-creation of syllabus, creation of content, instruction and assessment.
+Role: Co-creation of syllabus, creation of content, instruction and assessment.\\ [1.3cm]%hack
 
 \section*{Supervision}
 %\noindent
@@ -886,7 +886,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 
 \years{09/2020--present}\textsc{BSc Digital Music Technology Programme Leader}, Leicester Media School, DMU.\\
 \years{01/2019--12/2019}\textsc{MCT Programme Study Leader}, Department of Music, NTNU.\\
-\years{01/2019--12/2019}\textsc{MCT Programme Council Leader}, Department of Music, NTNU.
+\years{01/2019--12/2019}\textsc{MCT Programme Council Leader}, Department of Music, NTNU/UiO.
 
 \subsection*{Organisation Founder / Chair}
 \noindent
@@ -912,6 +912,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Conference Academic Chair / Meta-Reviewer / Local Chair}
 \noindent
 
+\years{2021}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2021).\\
 \years{2020e}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{ACM Creativity \& Cognition 2021}. Venice, Italy.\\
 \years{2020d}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{ACM Tangible, Embedded and Embodied Interaction 2021}. Salzburg, Austria.\\
 \years{2020c}\textsc{Conference Session Chair} (``Hardware and Software for SMC''). \emph{Sound and Music Computing Conference}. Torino, Italy.\\
@@ -945,18 +946,18 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
 \years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
 \years{2018--2020}\emph{International Society for Music Information Retrieval Conference} (2018--2020).\\
-\years{2017--2021}\emph{ACM Creativity and Cognition} (2017, 2019, 2021).\\
+\years{2017}\emph{ACM Creativity and Cognition} (2017).\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
 \years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017, 2018).\\
 \years{2016, 2020}\emph{International Conference on Live Interfaces} (2016, 2020).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
-\years{2016--2019}\emph{Web Audio Conference} (2016--2019).\\
+\years{2016--2020}\emph{Web Audio Conference} (2016--2020).\\
 \years{2015--2020}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2021).\\
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
-\years{2012--2020}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2021).\\
-\years{2011--2019}\emph{New Interfaces for Musical Expression} (2011--2020).
+\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2018).\\
+\years{2011--2018}\emph{New Interfaces for Musical Expression} (2011--2018).
 
 \subsection*{Journal Reviewer}
 \noindent
