--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -113,7 +113,7 @@ I have been working since 2000 as interaction designer, web designer and web dev
 
 {\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (2008, 2011, 2014, 2017--2020); Web Audio Conference (2017--2019); Audio Mostly (2010, 2017--2018); Tangible, Embedded, and Embodied Interaction Conference (2011, 2017--2018); International Conference on Computational Creativity (2017); International Conference on Live Coding (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing Conference (2010, 2012, 2016); International Conference of Live Interfaces (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--2012); and International Computer Music Conference (2011).\\
 
-{\textbf{Invited Keynote Talks}} at Sound and Music Computing Conference (2020).\\
+{\textbf{Invited Keynote Talks}} at Sound and Music Computing Conference (2020); Women in Sound Women on Sound (2016).\\
 
 {\textbf{Performances}} at Network Music Festival (2020); Eulerroom Equinox (2020); PACE / DMU (2020); International Conference on Live Coding (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); Web Audio Conference (2017--2019); Cube Fest (2018); New Interfaces for Musical Expression (2017--2018); Tangible, Embedded, and Embodied Interaction Conference (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
 
