--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -303,13 +303,15 @@ Candidate’s Share: 50\% (1,500 \euro)
 \section*{Research Profiles}
 \noindent
 
+\textbullet \- \href{https://orcid.org/0000-0003-2333-6941}{ORCID}\\
 \textbullet \- \href{https://scholar.google.com/citations?user=yi3WXM8AAAAJ}{Google Scholar}\\
 \textbullet \- \href{https://www.semanticscholar.org/author/Anna-Xamb\%C3\%B3/1915531}{Semantic Scholar}\\
 \textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}\\
 \textbullet \- \href{http://open.academia.edu/AnnaXambo}{Academia.edu}\\
 \textbullet \- \href{https://dora.dmu.ac.uk/browse?type=author&value=Xambo,\%20Anna}{DORA (De Montfort Open Research Archive)}\\
 \textbullet \- \href{https://app.cristin.no/persons/show.jsf?id=997893}{CRISTIN (Current Research Information System in Norway)}\\
-\textbullet \- \href{http://oro.open.ac.uk/view/person/ax22.html}{Open Research Online}
+\textbullet \- \href{http://oro.open.ac.uk/view/person/ax22.html}{Open Research Online}\\
+\textbullet \- \href{https://publons.com/researcher/3980818/anna-xambo/}{Web of Science}
 %[1.2cm]%hack
 
 \section*{Publications}
@@ -351,6 +353,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
+{\years{2021}\textbf{Xambó, A.}, Roma, G., Roig, S., Solaz, E. (Accepted) ``Live Coding with the Cloud and a Virtual Agent''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '21)}. Shanghai, China.}\\
 {\years{2020b}\textbf{Xambó, A.}, Roma, G. (2020) ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '20)}. Birmingham, UK. pp. 55--60.}\\
 \years{2020a}Jawad, K., \textbf{Xambó, A.} (2020) ``How to Talk of Music Technology: An Interview Analysis Study of Live Interfaces for Music Performance among Expert Women''. In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2020)}. Trondheim, Norway. pp. 41--47.\\
 \years{2019b}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. (2019) ``Facilitating Team-Based Programming Learning with Web Audio''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 2--7. \emph{Best Paper Award}.\\
@@ -412,7 +415,10 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
-\years{2021} \textsc{Oral Presenter (online)} (February 23, 2021). “Live Coding Using Crowdsourced Sounds and a Virtual Agent". \emph{ATLAS Seminar / Colloquium}. University of Colorado Boulder, Boulder, CO, USA.\\ 
+\years{2021d} \textsc{Keynote Speaker (online)} (Forthcoming). \emph{Web Audio Conference 2021 (SMC 2021)}. Barcelona, Spain.}\\ 
+\years{2021c} \textsc{Panel Member} (May 6, 2021). “Session 3: Musical performance \& education with AI ". \emph{ARTIFICIA Festival}. Barcelona, Spain. \href{https://youtu.be/o0arHV4s6Mo}{[video]}\\ 
+\years{2021b} \textsc{Oral Presenter (online)} (April 29, 2021). “Insights Into MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding". \emph{Coding Literacy, Practices and Cultures / Colloquium}. University of Magdeburg, Germany, and Film University KONRAD WOLF in Potsdam Babelsberg, Germany.\\ 
+\years{2021a} \textsc{Oral Presenter (online)} (February 23, 2021). “Live Coding Using Crowdsourced Sounds and a Virtual Agent". \emph{ATLAS Seminar / Colloquium}. University of Colorado Boulder, Boulder, CO, USA.\\ 
 \years{2020c} \textsc{Oral Presenter (online)} (October 6, 2020). “From Tabletop Tangible Interfaces to Virtual Agents in Live Coding: Five Years of Research in Progress". \emph{IUPUI MAT PhD seminar}. Department of Music and Arts Technology, Purdue School of Engineering and Technology, Indiana University--Purdue University Indianapolis, Indianapolis, IN, USA.\\ 
 \years{2020b} \textsc{Oral Presenter (online)} (September 21, 2020). “Virtual Agents in Live Coding: Preliminary Investigations". \emph{Meetup for Women in Arts and Technology}. NOTAM, Oslo, Norway.\\ 
 \years{2020a} \textsc{Keynote Speaker (online)} (June 24, 2020). “Collaborative/Participatory Music Experiences: A Dialogue Between SMC and HCI". \emph{Sound and Music Computing Conference 2020 (SMC 2020)}. Torino, Italy. \href{https://youtu.be/fWqhhdkVO6o}{[video]}\\ 
@@ -503,8 +509,11 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Workshops}
 \noindent
 
-
-\years{2021}Pardue, L., Martínez, J. and \textbf{Xambó, A.} (January 14, 2021). “NIME Diversity Workshop". Online.\\
+\years{2021d}Pardue, L., Martínez, J., \textbf{Xambó, A.}, Cavdir, D., Almeida, I. and Bin, A. (June 14, 2021). “Actions We Can Take to Improve Diversity and Inclusivity at NIME". Online workshop. \emph{NIME '21}, Shanghai, China.\\
+\years{2021c}\textbf{Xambó, A.}, Roig, S. (January 25/27/29, 2021). “Performing With a Virtual Agent: Machine Learning for Live Coding". Online workshop. \emph{Leicester Hackspace}, Leicester, UK.\\
+\years{2021b}Pardue, L., Martínez, J. and \textbf{Xambó, A.} (January 14, 2021). “NIME Diversity Workshop". Online workshop.\\
+\years{2021a}\textbf{Xambó, A.}, Roig, S. (January 11/13/15, 2021). “Performing With a Virtual Agent: Machine Learning for Live Coding". Online workshop. \emph{l'ull cec}, Barcelona, Spain.\\
+\years{2020c}\textbf{Xambó, A.}, Roig, S. (December 7/9/11, 2020). “Performing With a Virtual Agent: Machine Learning for Live Coding". Online workshop. \emph{IKLECTIK}, London, UK.\\
 \years{2020b}\textbf{Xambó, A.} (September 25, 2020). “Creative Audio Programming for the Web with Tone.js". \emph{Women Who Code} workshop series, School of Media Arts, Columbia College Chicago, IL, USA.\\
 \years{2020a}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Martin, C., Armitage, J., Granieri, N., Fiebrink, R., Naveda, L. (July 21, 2020). “NIME Publication Ecosystem Workshop". \emph{NIME '20}. Birmingham, UK.\\
 \years{2019c} \textbf{Xambó, A.} (June 20--21, 2019). “Creative Audio Programming for the Web". \emph{Filmuniversität Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies (Module 5 Audiovisual Application Design).\\
@@ -553,7 +562,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Broadcasting}
 \noindent
 
-\years{2021}Anna Xambó's “Magnets". (February 2, 2021). TOPLAP \#2 w/ hangar.org. Audio Formal on Dublab.es.\\
+\years{2021b}Anna Xambó's “Magnets". (April 12, 2021). Two Foot Left (Mixcloud playlist). Sheffield Live! Sheffield, UK.\\
+\years{2021a}Anna Xambó's “Magnets". (February 2, 2021). TOPLAP \#2 w/ hangar.org (Ramon Casamajó). Audio Formal on Dublab.es.\\
 \years{2020}Anna Xambó's “Magnets". (November 9, 2020). Sleepsang - Hyperobjects w/ Sleepsang (Mixcloud playlist).\\
 \years{2019}Anna Xambó's “Footsteps". Feminatronic \#161 - Your 2019 Playback and More (SoundCloud playlist).\\
 \years{2018c}Anna Xambó's “H2RI.01-04". (June 21, 2018). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
@@ -574,7 +584,9 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Performances}
 \noindent
 
-\years{2021}\textbf{Xambó, A.} (February 21, 2021). ``They Are the Robots: a live coding session''. \emph{Transnodal TOPLAP}. Online event. Streaming from Sheffield, UK.\\
+\years{2021c}\textbf{Xambó, A.} (Forthcoming). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. \emph{WAC 21}. Online event. Barcelona, Spain.\\
+\years{2021b}\textbf{Xambó, A.} (May 6, 2021). ``Sonic Haikus''. \emph{ARTIFICIA Festival}. Online event. Barcelona, Spain.\\
+\years{2021a}\textbf{Xambó, A.} (February 21, 2021). ``They Are the Robots: a live coding session''. \emph{Transnodal TOPLAP}. Online event. Streaming from Sheffield, UK.\\
 \years{2020e}\textbf{Xambó, A.} (December 12, 2020). ``A live coding session''. \emph{Similar Sounds: A Virtual Agent in Live Coding}. IKLECTIK, London. Online event. Streaming from Sheffield, UK.\\
 \years{2020d}\textbf{Xambó, A.} (November 14, 2020). ``A live coding session in binaural audio''. \emph{Sound Junction Satellites: Live Coding \& 3-D Sound -- Online Live Stream}. University of Sheffield Concerts/Algomech, Sheffield, UK. Online event. Streaming from Sheffield, UK.\\
 \years{2020c}\textbf{Xambó, A.} (July 17, 2020). ``A Live Coding Exploration of How the Network Sounds''. \emph{Network Music Festival 2020}. Streaming from Sheffield, UK.\\
@@ -942,7 +954,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{2020b}\emph{Workshop on the Internet of Sounds} (2020).\\ 
 \years{2020a}\emph{Network Music Festival} (2020).\\
 \years{2019b}\emph{Workshop on Ubiquitous Music} (2020).\\
-\years{2019a}\emph{Audio Mostly} (2019).\\
+\years{2019a--2021}\emph{Audio Mostly} (2019, 2021).\\
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
 \years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
 \years{2018--2020}\emph{International Society for Music Information Retrieval Conference} (2018--2020).\\
@@ -1055,7 +1067,7 @@ Version Control Systems: CVS, Git, Subversion.\\
 Music \& Audio Apps: DAWs (Ableton Live, Cubase, Reaper, Logic Pro), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio measurement \& test (Lindos).\\
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty).\\
-Online Learning Platforms: Blackboard, Canvas.\\
+Online Learning Platforms: Blackboard, Canvas, Teams.\\
 Hardware: Arduino, Bela, Lindos.\\
 Circuit simulators: Tinkercad, OrCAD.
 
