--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -416,7 +416,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \noindent
 
 \years{2021d} \textsc{Keynote Speaker (online)} (Forthcoming). \emph{Web Audio Conference 2021 (SMC 2021)}. Barcelona, Spain.}\\ 
-\years{2021c} \textsc{Panel Member} (May 6, 2021). “Session 3: Musical performance \& education with AI ". \emph{ARTIFICIA Festival}. Barcelona, Spain. \href{https://youtu.be/o0arHV4s6Mo}{[video]}\\ 
+\years{2021c} \textsc{Panel Member} (May 6, 2021). “Session 3: Musical performance \& education with AI". \emph{ARTIFICIA Festival}. Barcelona, Spain. \href{https://youtu.be/o0arHV4s6Mo}{[video]}\\ 
 \years{2021b} \textsc{Oral Presenter (online)} (April 29, 2021). “Insights Into MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding". \emph{Coding Literacy, Practices and Cultures / Colloquium}. University of Magdeburg, Germany, and Film University KONRAD WOLF in Potsdam Babelsberg, Germany.\\ 
 \years{2021a} \textsc{Oral Presenter (online)} (February 23, 2021). “Live Coding Using Crowdsourced Sounds and a Virtual Agent". \emph{ATLAS Seminar / Colloquium}. University of Colorado Boulder, Boulder, CO, USA.\\ 
 \years{2020c} \textsc{Oral Presenter (online)} (October 6, 2020). “From Tabletop Tangible Interfaces to Virtual Agents in Live Coding: Five Years of Research in Progress". \emph{IUPUI MAT PhD seminar}. Department of Music and Arts Technology, Purdue School of Engineering and Technology, Indiana University--Purdue University Indianapolis, Indianapolis, IN, USA.\\ 
@@ -563,18 +563,18 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \noindent
 
 \years{2021b}Anna Xambó's “Magnets". (April 12, 2021). Two Foot Left (Mixcloud playlist). Sheffield Live! Sheffield, UK.\\
-\years{2021a}Anna Xambó's “Magnets". (February 2, 2021). TOPLAP \#2 w/ hangar.org (Ramon Casamajó). Audio Formal on Dublab.es.\\
-\years{2020}Anna Xambó's “Magnets". (November 9, 2020). Sleepsang - Hyperobjects w/ Sleepsang (Mixcloud playlist).\\
+\years{2021a}Anna Xambó's “Magnets". (February 2, 2021). TOPLAP \#2 w/ hangar.org (Ramon Casamajó). Audio Formal on Dublab.es. Barcelona, Spain.\\
+\years{2020}Anna Xambó's “Magnets". (November 9, 2020). Sleepsang - Hyperobjects w/ Sleepsang (Mixcloud playlist). Sheffield, UK.\\
 \years{2019}Anna Xambó's “Footsteps". Feminatronic \#161 - Your 2019 Playback and More (SoundCloud playlist).\\
-\years{2018c}Anna Xambó's “H2RI.01-04". (June 21, 2018). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
+\years{2018c}Anna Xambó's “H2RI.01-04". (June 21, 2018). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio. Boston, MA, USA.\\
 \years{2018b}Anna Xambó's “H2RI.011". (June 10, 2018). NILUCCIO ON NOISE. Podcast \#154 (May 2018).\\
 \years{2018a}Anna Xambó's “H2RI.07". (May 17, 2018). No Pigeonholes EXP on KOWS-FM.\\
 \years{2013f}peterMann's “og02". (July 28, 2013). BiP\_HOp Generation on Radio Grenouille.\\
 \years{2013e}peterMann's “og01", og05, og07 \& og09. (June 23, 2013). Framework radio \#426.\\
-\years{2013d}peterMann's “og01". (March 28, 2013). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
+\years{2013d}peterMann's “og01". (March 28, 2013). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio. Boston, MA, USA.\\
 \years{2013c}peterMann's “og01" \& “og10". (March 2, 2013). Onda Sonora.\\
-\years{2013b}peterMann's selection of \emph{On The Go}'s tracks. (February 3, 2013). RNE Atmósfera.\\
-\years{2013a}peterMann's “og02". (February 2, 2013). Störung Radio 127 on ScannerFM.\\
+\years{2013b}peterMann's selection of \emph{On The Go}'s tracks. (February 3, 2013). RNE Atmósfera. Madrid, Spain.\\
+\years{2013a}peterMann's “og02". (February 2, 2013). Störung Radio 127 on ScannerFM. Barcelona, Spain.\\
 \years{2010b}peterMann's “init 10--12". (December 18, 2010). Onda Sonora.\\
 \years{2010a}peterMann's “init 2". (April 12, 2010). Sismógrafo.%\\[2cm]%hack
 
@@ -584,7 +584,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Performances}
 \noindent
 
-\years{2021c}\textbf{Xambó, A.} (Forthcoming). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. \emph{WAC 21}. Online event. Barcelona, Spain.\\
+\years{2021d}\textbf{Xambó, A.} (Forthcoming). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. \emph{WAC 21}. Online event. Barcelona, Spain.\\
+\years{2021c}\textbf{Xambó, A.} (Forthcoming). ``A Live Coding Session With the Cloud and a Virtual Agent''. \emph{NIME 21}. Online event. Shanghai, China.\\
 \years{2021b}\textbf{Xambó, A.} (May 6, 2021). ``Sonic Haikus''. \emph{ARTIFICIA Festival}. Online event. Barcelona, Spain.\\
 \years{2021a}\textbf{Xambó, A.} (February 21, 2021). ``They Are the Robots: a live coding session''. \emph{Transnodal TOPLAP}. Online event. Streaming from Sheffield, UK.\\
 \years{2020e}\textbf{Xambó, A.} (December 12, 2020). ``A live coding session''. \emph{Similar Sounds: A Virtual Agent in Live Coding}. IKLECTIK, London. Online event. Streaming from Sheffield, UK.\\
