--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -98,32 +98,32 @@ bookmarks, colorlinks, breaklinks,
 Senior Lecturer in Music and Audio Technology, Faculty of Computing, Engineering and Media, DMU -- \href{http://annaxambo.me/}{annaxambo.me}\\
 
 {\textbf{Education}}\\
-\textsc{PhD}, Music computing \& HCI, The Open University, 2015.\\
-MSc, Information, Communication and Audiovisual Media Technologies, Universitat Pompeu Fabra, 2008.\\
+\textsc{PhD}, Music computing \& HCI, The Open University (OU), 2015.\\
+MSc, Information, Communication and Audiovisual Media Technologies, Universitat Pompeu Fabra (UPF), 2008.\\
 BA, MA, Social and Cultural Anthropology, Universitat de Barcelona, 1996.\\
 
 {\textbf{Employment}}\\
 Senior Lecturer, DMU, 2020--present. I am teaching undergraduate courses in audio electronics, studio technology and DSP. 
-I have been associate professor, NTNU (2018--2019) where I also was MCT master programme council leader and MCT programme study leader at NTNU, visiting lecturer and postdoc at Queen Mary University of London (2017--2019) and postdoc at Georgia Tech (2015--2017). Also, I have been co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--2019) and co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--2017). From 2013 to 2014, I was a research fellow at the London Knowledge Lab, UCL Institute of Education.
+I have been associate professor, Norwegian University of Science and Technology (NTNU) (2018--2019) where I also was Music Communication \& Technology (MCT) master programme council leader and MCT programme study leader at NTNU, visiting lecturer and postdoc at Queen Mary University of London (2017--2019) and postdoc at Georgia Tech (2015--2017). Also, I have been co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--2019) and co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--2017). From 2013 to 2014, I was a research fellow at the London Knowledge Lab, University College London Institute of Education.
 I have been working since 2000 as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies for 10 years (2000--2010) as well as co-founder of my own interactive media studio (2004--2010).\\
 
-{\textbf{Grants/Awards}} from HDI / EPSRC (2020); from NTNU (2019, 2018--2020); Sonic Arts Research Center (2018); NCWIT (2017); National Science Foundation AISL (2016); Women in Music Information Retrieval (2016); The Open University (2010--2013, 2010); Fundació Caixa de Sabadell (2003--2004); and Generalitat de Catalunya (1998--1999, 2001--2002).\\
+{\textbf{Grants/Awards}} from HDI / EPSRC (2020-2021); from NTNU (2019, 2018--2020); Sonic Arts Research Center (2018); NCWIT (2017); National Science Foundation AISL (2016); Women in Music Information Retrieval (2016); OU (2010--2013, 2010); Fundació Caixa de Sabadell (2003--2004); and Generalitat de Catalunya (1998--1999, 2001--2002).\\
 
 {\textbf{Peer-Reviewed Journal Publications}} in Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
-{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (2008, 2011, 2014, 2017--2020); Web Audio Conference (2017--2019); Audio Mostly (2010, 2017--2018); Tangible, Embedded, and Embodied Interaction Conference (2011, 2017--2018); International Conference on Computational Creativity (2017); International Conference on Live Coding (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing Conference (2010, 2012, 2016); International Conference of Live Interfaces (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--2012); and International Computer Music Conference (2011).\\
+{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--2020); Web Audio Conference (WAC) (2017--2019); Audio Mostly (2010, 2017--2018); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--2018); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--2012); and International Computer Music Conference (2011).\\
 
-{\textbf{Invited Keynote Talks}} at Sound and Music Computing Conference (2020); Women in Sound Women on Sound (2016).\\
+{\textbf{Invited Keynote Talks}} at WAC (forthcoming); SMC (2020); Women in Sound Women on Sound (2016).\\
 
-{\textbf{Performances}} at Network Music Festival (2020); Eulerroom Equinox (2020); PACE / DMU (2020); International Conference on Live Coding (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); Web Audio Conference (2017--2019); Cube Fest (2018); New Interfaces for Musical Expression (2017--2018); Tangible, Embedded, and Embodied Interaction Conference (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
+{\textbf{Performances}} at Network Music Festival (2020); Eulerroom Equinox (2020); PACE / DMU (2020); ICLC (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); WAC (2017--2019); Cube Fest (2018); NIME (2017--2018); TEI Conference (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
 
-{\textbf{Conference Organizer}} for Web Audio Conference (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); New Interfaces for Musical Expression Conference (2019, paper co-chair, session chair); International Conference of Live Interfaces (2020, conference local committee member); ACM Creativity \& Cognition (2019, programme committee member); ACM Spatial User Interaction (2018, programme committee member); Computational Creativity (2017, local committee member); International Computer Music Conference (2011, session chair); and Tangible, Embedded, and Embodied Interaction Conference (2020--2021, programme committee member).\\
+{\textbf{Conference Organizer}} for WAC (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); NIME (2019, paper co-chair, session chair); ICLI (2020, conference local committee member); ACM Creativity \& Cognition (2019, programme committee member); ACM Spatial User Interaction (2018, programme committee member); Computational Creativity (2017, local committee member); International Computer Music Conference (2011, session chair); and TEI Conference (2020--2021, programme committee member).\\
 
 {\textbf{Interviews/Press Coverage}} in OnCurating.org (2020); Ballade.no (2019); Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
 
-{\textbf{Research Visits}} at Filmuniversität Babelsberg KONRAD WOLF (2018--2019); University of Strathclyde (2011--2012); Universitat Pompeu Fabra (2011); and The Open University (2010).\\
+{\textbf{Research Visits}} at Filmuniversität Babelsberg KONRAD WOLF (2018--2019); University of Strathclyde (2011--2012); UPF (2011); and OU (2010).\\
 
-{\textbf{Blog Coordinator}} at WoNoMute (2018--2019); AudioCommons (2017--2018); Women in Music Tech (2016--2017); Methodological Innovation in Digital Arts and Social Sciences (2013--2014); postWIMP (2010--2011); and streetTypes (2006--2009).
+{\textbf{Blog Coordinator}} at MIRLCAuto (2020--2021); WoNoMute (2018--2019); AudioCommons (2017--2018); Women in Music Tech (2016--2017); Methodological Innovation in Digital Arts and Social Sciences (2013--2014); postWIMP (2010--2011); and streetTypes (2006--2009).
 
 %\vspace{1cm}
 %\vfill{}
